--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,17 @@
 [package]
 name = "rust-discord-bot"
 version = "0.1.0"
-edition = "2021"
+authors = ["my name <my@email.address>"]
+edition = "2018"
 
 [dependencies]
-serenity = "0.12"
-tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+dotenv = "0.15"
+tracing = "0.1.23"
+tracing-subscriber = "0.3"
+serenity = {version = "0.12", features = ["cache", "framework", "standard_framework", "rustls_backend"]}
+
+
+[dependencies.tokio]
+version = "1.0"
+features = ["macros", "signal", "rt-multi-thread"]
+
