--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ reqwest = { version = "0.11", default-features = false, features = ["json", "rus
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-trait = "0.1"
+regex = "1.10"
+urlencoding = "2.1"
 
 [dependencies.tokio]
 version = "1"
